--- a/css/style.css
+++ b/css/style.css
@@ -51,18 +51,18 @@ nav {
   .nav__left {
     display: flex;
     align-items: center; }
-    .nav__left--logo {
-      height: 4.5rem;
-      margin: 0 2.5rem; }
-    .nav__left--phone {
-      margin: 0 2.5rem; }
-      @media only screen and (max-width: 500px) {
-        .nav__left--phone {
-          position: absolute;
-          top: 1rem;
-          left: 50%;
-          transform: translate(-50%, 0);
-          margin: 0; } }
+  .nav__logo {
+    height: 4.5rem;
+    margin: 0 2.5rem; }
+  .nav__phone {
+    margin: 0 2.5rem; }
+    @media only screen and (max-width: 500px) {
+      .nav__phone {
+        position: absolute;
+        top: 1rem;
+        left: 50%;
+        transform: translate(-50%, 0);
+        margin: 0; } }
   .nav__right ul {
     display: flex; }
     @media only screen and (max-width: 700px) {
@@ -79,8 +79,9 @@ nav {
       opacity: .5;
       border-bottom: 1px solid rgba(0, 0, 0, 0.3); }
 
-.btn {
+.section__btn--1 {
   font-size: 1.2rem;
+  margin-top: 2rem;
   background-color: #212121;
   color: #ffffff;
   padding: 1.5rem 2rem;
@@ -88,7 +89,7 @@ nav {
   cursor: pointer;
   transition: linear .1s; }
 
-.btn:hover {
+.section__btn--1:hover {
   background-color: transparent;
   color: #212121; }
 
@@ -131,52 +132,6 @@ nav {
         justify-self: center;
         margin-left: 0;
         margin-bottom: 2rem; } }
-  .footer__location--title {
-    margin-bottom: 2rem; }
-  @media only screen and (max-width: 500px) {
-    .footer__location {
-      grid-column: 1 / 2;
-      grid-row: 2 / 3; } }
-  @media only screen and (min-width: 501px) and (max-width: 700px) {
-    .footer__location {
-      grid-column: 1 / 2;
-      grid-row: 2 / 3;
-      justify-self: right; } }
-  @media only screen and (max-width: 500px) {
-    .footer__contact {
-      grid-column: 1 / 2;
-      grid-row: 3 / 4;
-      position: relative;
-      left: 2rem;
-      margin-bottom: 4rem; } }
-  @media only screen and (min-width: 501px) and (max-width: 700px) {
-    .footer__contact {
-      grid-column: 2 / 3;
-      grid-row: 2 / 3; } }
-  .footer__contact--title {
-    margin-bottom: 2rem; }
-  .footer__contact--email {
-    text-decoration: underline; }
-  .footer__contact--social img {
-    cursor: pointer;
-    width: 2.5rem;
-    margin-right: 1rem;
-    margin-top: 1rem;
-    transition: transform linear .1s; }
-  .footer__contact--social img:hover {
-    transform: scale(1.1); }
-  .footer__copyright {
-    grid-column: 3 / 5;
-    grid-row: 2 / 3;
-    align-self: center; }
-    @media only screen and (max-width: 500px) {
-      .footer__copyright {
-        grid-column: 1 / 2;
-        grid-row: 4 / 5; } }
-    @media only screen and (min-width: 501px) and (max-width: 700px) {
-      .footer__copyright {
-        grid-column: 1 / 3;
-        grid-row: 3 / 4; } }
   .footer__go-up {
     width: 5rem;
     position: absolute;
@@ -194,6 +149,62 @@ nav {
     @media only screen and (max-width: 500px) {
       .footer__go-up {
         left: 42%; } }
+
+@media only screen and (max-width: 500px) {
+  .location {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3; } }
+
+@media only screen and (min-width: 501px) and (max-width: 700px) {
+  .location {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    justify-self: right; } }
+
+.location__title {
+  margin-bottom: 2rem; }
+
+@media only screen and (max-width: 500px) {
+  .contact {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    position: relative;
+    left: 2rem;
+    margin-bottom: 4rem; } }
+
+@media only screen and (min-width: 501px) and (max-width: 700px) {
+  .contact {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3; } }
+
+.contact__title {
+  margin-bottom: 2rem; }
+
+.contact__email {
+  text-decoration: underline; }
+
+.contact__social img {
+  cursor: pointer;
+  width: 2.5rem;
+  margin-right: 1rem;
+  margin-top: 1rem;
+  transition: transform linear .1s; }
+
+.contact__social img:hover {
+  transform: scale(1.1); }
+
+.copyright {
+  grid-column: 3 / 5;
+  grid-row: 2 / 3;
+  align-self: center; }
+  @media only screen and (max-width: 500px) {
+    .copyright {
+      grid-column: 1 / 2;
+      grid-row: 4 / 5; } }
+  @media only screen and (min-width: 501px) and (max-width: 700px) {
+    .copyright {
+      grid-column: 1 / 3;
+      grid-row: 3 / 4; } }
 
 .hamburger {
   width: 4rem;
@@ -215,38 +226,30 @@ nav {
     @media only screen and (max-width: 700px) {
       .hamburger__wrapper {
         display: inline-block; } }
-
-.bar {
-  width: 4rem;
-  height: .35rem;
-  background-color: #000000;
-  position: absolute;
-  transition: all .25s linear 0s;
-  border-radius: 1rem; }
-
-.bar1 {
-  top: 0; }
-
-.bar2 {
-  top: 50%;
-  transform: translate(0, -50%); }
-
-.bar3 {
-  top: 100%;
-  transform: translate(0, -100%); }
-
-.hamburger:hover .bar {
-  top: 50%;
-  transform: translate(0, -50%); }
-
-.hamburger:hover .bar2 {
-  opacity: 0; }
-
-.hamburger:hover .bar1 {
-  transform: rotate(-135deg); }
-
-.hamburger:hover .bar3 {
-  transform: rotate(135deg); }
+  .hamburger__bar {
+    width: 4rem;
+    height: .35rem;
+    background-color: #000000;
+    position: absolute;
+    transition: all .25s linear 0s;
+    border-radius: 1rem; }
+    .hamburger__bar--1 {
+      top: 0; }
+    .hamburger__bar--2 {
+      top: 50%;
+      transform: translate(0, -50%); }
+    .hamburger__bar--3 {
+      top: 100%;
+      transform: translate(0, -100%); }
+  .hamburger:hover .hamburger__bar {
+    top: 50%;
+    transform: translate(0, -50%); }
+    .hamburger:hover .hamburger__bar--1 {
+      transform: rotate(-135deg); }
+    .hamburger:hover .hamburger__bar--2 {
+      opacity: 0; }
+    .hamburger:hover .hamburger__bar--3 {
+      transform: rotate(135deg); }
 
 .header {
   height: 100vh; }
@@ -264,7 +267,7 @@ nav {
     border-bottom: 3px solid #000000;
     height: calc(100vh - 17rem);
     position: relative;
-    background-image: url("./../img/studio1920px.jpg");
+    background-image: url("./../../img/studio1920px.jpg");
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: cover;
@@ -278,32 +281,122 @@ nav {
     @media only screen and (min-resolution: 192dpi) and (min-width: 1920px), (min-width: 1920px) {
       .header__photo {
         background-image: url("./../../img/studio.jpg"); } }
-    .header__photo--text {
-      color: #ffffff;
-      font-size: 2.8rem;
-      background-color: rgba(0, 0, 0, 0.4);
-      border-radius: .5rem;
-      padding: 2rem 4rem;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%); }
-      @media only screen and (max-width: 900px) {
-        .header__photo--text {
-          width: 100%;
-          text-align: center; } }
-    .header__photo--arrow {
-      position: absolute;
-      bottom: 1rem;
-      left: 50%;
-      transform: translate(-50%, 0);
-      animation-name: bounce;
-      animation-timing-function: ease;
-      animation-duration: 2s;
-      animation-iteration-count: infinite; }
-      @media only screen and (max-width: 500px) {
-        .header__photo--arrow {
-          left: 42%; } }
+  .header__text {
+    color: #ffffff;
+    font-size: 2.8rem;
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: .5rem;
+    padding: 2rem 4rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+    @media only screen and (max-width: 900px) {
+      .header__text {
+        width: 100%;
+        text-align: center; } }
+  .header__arrow {
+    position: absolute;
+    bottom: 1rem;
+    left: 50%;
+    transform: translate(-50%, 0);
+    animation-name: bounce;
+    animation-timing-function: ease;
+    animation-duration: 2s;
+    animation-iteration-count: infinite; }
+    @media only screen and (max-width: 500px) {
+      .header__arrow {
+        left: 42%; } }
+
+.section__title {
+  font-size: 5rem;
+  margin-bottom: 5rem; }
+
+.section__text {
+  margin-bottom: 4rem; }
+  .section__text--3 span {
+    font-size: 1.4rem;
+    display: inline-block;
+    opacity: .7;
+    padding-bottom: 1.5rem; }
+
+.section__img {
+  width: 100%;
+  height: 35rem;
+  background-color: orangered;
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.45);
+  position: relative; }
+  @media only screen and (max-width: 550px) {
+    .section__img {
+      width: 60%; } }
+  .section__img p {
+    font-size: 2rem;
+    position: absolute;
+    left: 0;
+    bottom: -8rem;
+    transform: translate(0, -50%); }
+    .section__img p span {
+      font-size: 1.4rem; }
+  .section__img--1 {
+    background-image: url("./../../img/camera.jpg");
+    background-repeat: no-repeat; }
+    @media only screen and (max-width: 550px) {
+      .section__img--1 {
+        background-position: center; } }
+  .section__img--2 {
+    background-image: url("./../../img/wedding.jpg");
+    background-position: center;
+    background-repeat: no-repeat; }
+  .section__img--3 {
+    background-image: url("./../../img/dog.jpg");
+    background-position: center;
+    background-repeat: no-repeat; }
+  .section__img--4 {
+    background-image: url("./../../img/girl.jpg");
+    background-position: center;
+    background-repeat: no-repeat; }
+
+.form {
+  padding: 2rem;
+  width: 60%;
+  border-radius: .5rem;
+  display: flex;
+  flex-direction: column; }
+  @media only screen and (max-width: 900px) {
+    .form {
+      width: 100%; } }
+  .form input {
+    font-size: 1.6rem;
+    margin-bottom: 2rem;
+    padding: 0 2rem;
+    height: 5rem;
+    width: 60%;
+    border-radius: .5rem;
+    border: 1px solid #00000049;
+    margin-right: 1rem; }
+    @media only screen and (max-width: 500px) {
+      .form input {
+        width: 100%;
+        margin-bottom: 0; } }
+  .form label {
+    font-size: 1.4rem;
+    opacity: .7; }
+    @media only screen and (max-width: 500px) {
+      .form label {
+        display: none; } }
+  .form #message {
+    width: 100%;
+    padding: 2rem;
+    border-radius: .5rem;
+    border: 1px solid #00000049; }
+  .form #submit-form {
+    margin: 2rem 0;
+    width: max-content;
+    border-radius: 0;
+    border: 0.3rem solid #212121; }
+    @media only screen and (max-width: 500px) {
+      .form #submit-form {
+        width: 100%; } }
 
 .main {
   max-width: 102.4rem;
@@ -311,8 +404,6 @@ nav {
   .main__section {
     margin: 20rem 0;
     padding: 0 2rem; }
-  .main__section--1__text {
-    margin-bottom: 4rem; }
   @media only screen and (max-width: 700px) {
     .main__section--1 {
       text-align: center; } }
@@ -328,41 +419,6 @@ nav {
       .main__section--2 {
         grid-template-columns: 500px;
         justify-content: center; } }
-    .main__section--2__img {
-      width: 100%;
-      height: 35rem;
-      background-color: orangered;
-      box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.45);
-      position: relative; }
-      @media only screen and (max-width: 550px) {
-        .main__section--2__img {
-          width: 60%; } }
-      .main__section--2__img p {
-        font-size: 2rem;
-        position: absolute;
-        left: 0;
-        bottom: -8rem;
-        transform: translate(0, -50%); }
-        .main__section--2__img p span {
-          font-size: 1.4rem; }
-      .main__section--2__img--1 {
-        background-image: url("./../img/camera.jpg");
-        background-repeat: no-repeat; }
-        @media only screen and (max-width: 550px) {
-          .main__section--2__img--1 {
-            background-position: center; } }
-      .main__section--2__img--2 {
-        background-image: url("./../img/wedding.jpg");
-        background-position: center;
-        background-repeat: no-repeat; }
-      .main__section--2__img--3 {
-        background-image: url("./../img/dog.jpg");
-        background-position: center;
-        background-repeat: no-repeat; }
-      .main__section--2__img--4 {
-        background-image: url("./../img/girl.jpg");
-        background-position: center;
-        background-repeat: no-repeat; }
   .main__section--3 {
     padding: 10rem 2rem;
     display: grid;
@@ -374,54 +430,3 @@ nav {
       .main__section--3 {
         grid-template-columns: minmax(300px, 1fr);
         row-gap: 10rem; } }
-    .main__section--3__container--text span {
-      font-size: 1.4rem;
-      display: inline-block;
-      opacity: .7;
-      padding-bottom: 1.5rem; }
-    .main__section--3__container--btn {
-      margin-top: 2rem; }
-  .main__section--4__title {
-    font-size: 5rem;
-    margin-bottom: 5rem; }
-  .main__section--4__form {
-    padding: 2rem;
-    width: 60%;
-    border-radius: .5rem;
-    display: flex;
-    flex-direction: column; }
-    @media only screen and (max-width: 900px) {
-      .main__section--4__form {
-        width: 100%; } }
-    .main__section--4__form input {
-      font-size: 1.6rem;
-      margin-bottom: 2rem;
-      padding: 0 2rem;
-      height: 5rem;
-      width: 60%;
-      border-radius: .5rem;
-      border: 1px solid #00000049;
-      margin-right: 1rem; }
-      @media only screen and (max-width: 500px) {
-        .main__section--4__form input {
-          width: 100%;
-          margin-bottom: 0; } }
-    .main__section--4__form label {
-      font-size: 1.4rem;
-      opacity: .7; }
-      @media only screen and (max-width: 500px) {
-        .main__section--4__form label {
-          display: none; } }
-    .main__section--4__form #message {
-      width: 100%;
-      padding: 2rem;
-      border-radius: .5rem;
-      border: 1px solid #00000049; }
-    .main__section--4__form #submit-form {
-      margin: 2rem 0;
-      width: max-content;
-      border-radius: 0;
-      border: 0.3rem solid #212121; }
-      @media only screen and (max-width: 500px) {
-        .main__section--4__form #submit-form {
-          width: 100%; } }
