--- a/sass/components/_button-nav.scss
+++ b/sass/components/_button-nav.scss
@@ -24,48 +24,49 @@
 
     }
 
-}
+    &__bar{
+        width: 4rem;
+        height: .35rem;
+        background-color: #000000;
+        position: absolute;
+        transition: all .25s linear 0s;
+    
+        border-radius: 1rem;
 
+        &--1{
+            top: 0;
+        }
 
-.bar{
-    width: 4rem;
-    height: .35rem;
-    background-color: #000000;
-    position: absolute;
-    transition: all .25s linear 0s;
+        &--2{
+            top: 50%;
+            transform: translate(0,-50%);
+        }
 
-    border-radius: 1rem;
-}
+        &--3{
+            top: 100%;
+            transform: translate(0,-100%);
+        }
 
-.bar1{
-    top: 0;
-}
+    }
 
-.bar2{
-    top: 50%;
-    transform: translate(0,-50%);
-}
+    &:hover .hamburger__bar{
+        top: 50%;
+        transform: translate(0,-50%);
 
-.bar3{
-    top: 100%;
-    transform: translate(0,-100%);
-}
+        &--1{
+            transform: rotate(-135deg);
+        }
 
-.hamburger:hover .bar{
-    top: 50%;
-    transform: translate(0,-50%);
-}
+        &--2{
+            opacity: 0;
+        }
 
-.hamburger:hover .bar2{
-    opacity: 0;
-}
+        &--3{
+            transform: rotate(135deg);
+        }
 
-.hamburger:hover .bar1{
-    transform: rotate(-135deg);
-}
+    }
 
-.hamburger:hover .bar3{
-    transform: rotate(135deg);
 }
 
 
