--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -46,84 +46,6 @@
         
     }
 
-    &__location{
-
-        &--title{
-            margin-bottom: 2rem;
-        }
-
-        @media only screen and(max-width: 500px){
-            grid-column: 1 / 2;
-            grid-row: 2 / 3;
-        }
-
-        @media only screen and(min-width: 501px) and(max-width: 700px){
-            grid-column: 1 / 2;
-            grid-row: 2 / 3;
-            justify-self: right;
-        }
-
-    }
-
-    &__contact{
-
-        @media only screen and(max-width: 500px){
-            grid-column: 1 / 2;
-            grid-row: 3 / 4;
-            position: relative;
-            left: 2rem;
-            margin-bottom: 4rem;
-        }
-
-        @media only screen and(min-width: 501px) and(max-width: 700px){
-            grid-column: 2 / 3;
-            grid-row: 2 / 3;
-        }
-
-        &--title{
-            margin-bottom: 2rem;
-        }
-
-        &--email{
-            text-decoration: underline;
-        }
-
-        &--social{
-            img{
-                cursor: pointer;
-
-                width: 2.5rem;
-                margin-right: 1rem;
-                margin-top: 1rem;
-                transition: transform linear .1s;
-            }
-
-            img:hover{
-                transform: scale(1.1);
-            }
-
-        }
-
-    }
-
-    &__copyright{
-        grid-column: 3 / 5;
-        grid-row: 2 / 3;
-        align-self: center;
-
-        @media only screen and(max-width: 500px){
-            grid-column: 1 / 2;
-            grid-row: 4 / 5;
-        }
-
-        @media only screen and(min-width: 501px) and(max-width: 700px){
-            grid-column: 1 / 3;
-            grid-row: 3 / 4;
-        }
-
-       
-    }
-
     &__go-up{
         width: 5rem;
         position: absolute;
@@ -148,3 +70,78 @@
     }
 
 }
+
+.location{
+    @media only screen and(max-width: 500px){
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+    }
+
+    @media only screen and(min-width: 501px) and(max-width: 700px){
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+        justify-self: right;
+    }
+
+    &__title{
+        margin-bottom: 2rem;
+    }
+
+}
+
+.contact{
+    @media only screen and(max-width: 500px){
+        grid-column: 1 / 2;
+        grid-row: 3 / 4;
+        position: relative;
+        left: 2rem;
+        margin-bottom: 4rem;
+    }
+
+    @media only screen and(min-width: 501px) and(max-width: 700px){
+        grid-column: 2 / 3;
+        grid-row: 2 / 3;
+    }
+
+    &__title{
+        margin-bottom: 2rem;
+    }
+
+    &__email{
+        text-decoration: underline;
+    }
+
+    &__social{
+        img{
+            cursor: pointer;
+
+            width: 2.5rem;
+            margin-right: 1rem;
+            margin-top: 1rem;
+            transition: transform linear .1s;
+        }
+
+        img:hover{
+            transform: scale(1.1);
+        }
+    }
+    
+}
+
+.copyright{
+    grid-column: 3 / 5;
+    grid-row: 2 / 3;
+    align-self: center;
+
+    @media only screen and(max-width: 500px){
+        grid-column: 1 / 2;
+        grid-row: 4 / 5;
+    }
+
+    @media only screen and(min-width: 501px) and(max-width: 700px){
+        grid-column: 1 / 3;
+        grid-row: 3 / 4;
+    }
+
+}
+
