--- a/sass/components/_button-nav.scss
+++ b/sass/components/_button-nav.scss
@@ -49,7 +49,7 @@
 
     }
 
-    &:hover .hamburger__bar{
+    /* &:hover .hamburger__bar{
         top: 50%;
         transform: translate(0,-50%);
 
@@ -65,7 +65,7 @@
             transform: rotate(135deg);
         }
 
-    }
+    } */
 
 }
 
