--- a/css/style.css
+++ b/css/style.css
@@ -48,26 +48,35 @@ nav {
   justify-content: space-between;
   align-items: center;
   height: 5rem; }
+  @media only screen and (max-width: 700px) {
+    .nav {
+      position: fixed;
+      flex-direction: column;
+      justify-content: space-evenly;
+      background-color: #fff;
+      z-index: 1000;
+      height: max-content;
+      width: 100vw;
+      height: 50vh; } }
+  @media only screen and (min-width: 700px) {
+    .nav {
+      visibility: visible !important; } }
   .nav__left {
     display: flex;
     align-items: center; }
+    @media only screen and (max-width: 700px) {
+      .nav__left {
+        flex-direction: column; } }
   .nav__logo {
     height: 4.5rem;
     margin: 0 2.5rem; }
+    @media only screen and (max-width: 700px) {
+      .nav__logo {
+        margin-bottom: 2rem; } }
   .nav__phone {
     margin: 0 2.5rem; }
-    @media only screen and (max-width: 500px) {
-      .nav__phone {
-        position: absolute;
-        top: 1rem;
-        left: 50%;
-        transform: translate(-50%, 0);
-        margin: 0; } }
   .nav__right ul {
     display: flex; }
-    @media only screen and (max-width: 700px) {
-      .nav__right ul {
-        display: none; } }
     .nav__right ul li {
       font-size: 1.6rem;
       padding-bottom: .5rem;
@@ -78,6 +87,11 @@ nav {
     .nav__right ul li:hover {
       opacity: .5;
       border-bottom: 1px solid rgba(0, 0, 0, 0.3); }
+    @media only screen and (max-width: 700px) {
+      .nav__right ul {
+        flex-direction: column; }
+        .nav__right ul li {
+          margin: 2rem 0; } }
 
 .section__btn--1 {
   font-size: 1.2rem;
@@ -212,7 +226,24 @@ nav {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); }
+  transform: translate(-50%, -50%);
+  /* &:hover .hamburger__bar{
+        top: 50%;
+        transform: translate(0,-50%);
+
+        &--1{
+            transform: rotate(-135deg);
+        }
+
+        &--2{
+            opacity: 0;
+        }
+
+        &--3{
+            transform: rotate(135deg);
+        }
+
+    } */ }
   .hamburger__wrapper {
     display: none;
     width: 6rem;
@@ -241,15 +272,6 @@ nav {
     .hamburger__bar--3 {
       top: 100%;
       transform: translate(0, -100%); }
-  .hamburger:hover .hamburger__bar {
-    top: 50%;
-    transform: translate(0, -50%); }
-    .hamburger:hover .hamburger__bar--1 {
-      transform: rotate(-135deg); }
-    .hamburger:hover .hamburger__bar--2 {
-      opacity: 0; }
-    .hamburger:hover .hamburger__bar--3 {
-      transform: rotate(135deg); }
 
 .header {
   height: 100vh; }
@@ -274,7 +296,10 @@ nav {
     background-color: rgba(0, 0, 0, 0.89); }
     @media only screen and (max-width: 500px) {
       .header__photo {
-        height: calc(100vh - 25rem); } }
+        height: calc(100vh - 20rem); } }
+    @media only screen and (min-width: 500px) and (max-width: 700px) {
+      .header__photo {
+        height: calc(100vh - 12rem); } }
     @media only screen and (min-width: 300px) and (max-width: 700px) {
       .header__photo {
         background-image: url("./../../img/studio700px.jpg"); } }
