--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -4,35 +4,47 @@
     align-items: center;
     height: 5rem;
 
+    @media only screen and(max-width: 700px){
+        position: fixed;
+        flex-direction: column;
+        justify-content: space-evenly;
+        background-color: #fff;
+        z-index: 1000;
+        height: max-content;
+        width: 100vw;
+        height: 50vh;
+    }
+
+    @media only screen and(min-width: 700px){
+        visibility: visible !important;
+    }
+
     &__left{
         display: flex;
         align-items: center;
+
+        @media only screen and(max-width: 700px){
+            flex-direction: column;
+        }
     }
 
     &__logo{
         height: 4.5rem;
         margin: 0 2.5rem;
+
+        @media only screen and(max-width: 700px){
+            margin-bottom: 2rem;
+        }
     }
 
     &__phone{
         margin: 0 2.5rem;
 
-        @media only screen and(max-width: 500px){
-            position: absolute;
-            top: 1rem;
-            left: 50%;
-            transform: translate(-50%, 0);
-            margin: 0;
-        }
     }
 
     &__right ul{
         display: flex;
 
-        @media only screen and(max-width: 700px){
-            display: none;
-        }
-        
         li{
             font-size: 1.6rem;
             padding-bottom: .5rem;
@@ -45,6 +57,13 @@
         li:hover{
             opacity: .5;
             border-bottom: $thin-border;
+        }
+
+        @media only screen and(max-width: 700px){
+            flex-direction: column;
+            li{
+                margin: 2rem 0;
+            }
         }
     }
 
