--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -21,7 +21,11 @@
         position: relative;
 
         @media only screen and(max-width: 500px){
-            height: calc(100vh - 25rem);
+            height: calc(100vh - 20rem);
+        }
+
+        @media only screen and(min-width: 500px) and(max-width: 700px){
+            height: calc(100vh - 12rem);
         }
 
 
